--- a/client/index.html
+++ b/client/index.html
@@ -26,9 +26,86 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Outfit:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <style>
+      :root {
+        color-scheme: dark;
+        font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+        background-color: #03030a;
+      }
+      *, *::before, *::after {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        min-height: 100vh;
+        min-height: 100dvh;
+        background: #03030a;
+        color: #f8fafc;
+        font-family: inherit;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+      }
+      #app-shell {
+        position: relative;
+        min-height: 100vh;
+        min-height: 100dvh;
+        overflow: hidden;
+        isolation: isolate;
+        background: radial-gradient(circle at 20% 20%, rgba(132, 204, 22, 0.15), transparent 45%),
+          #03030a;
+      }
+      #root {
+        position: relative;
+        z-index: 1;
+        min-height: 100vh;
+        min-height: 100dvh;
+      }
+      .hero-picture {
+        position: fixed;
+        inset: 0;
+        z-index: 0;
+        pointer-events: none;
+      }
+      .hero-picture img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: saturate(1.05) brightness(0.9);
+      }
+      .hero-gradient,
+      .hero-ambient {
+        position: fixed;
+        inset: 0;
+        z-index: 0;
+        pointer-events: none;
+      }
+      .hero-gradient {
+        background:
+          radial-gradient(circle at 15% 15%, rgba(132, 204, 22, 0.35), transparent 45%),
+          radial-gradient(circle at 75% 5%, rgba(56, 189, 248, 0.2), transparent 40%),
+          linear-gradient(180deg, rgba(3, 3, 10, 0) 0%, rgba(3, 3, 10, 0.85) 70%, rgba(3, 3, 10, 1) 100%);
+      }
+      .hero-ambient {
+        inset: auto auto 12% 6%;
+        width: min(320px, 35vw);
+        height: min(320px, 35vw);
+        background: radial-gradient(circle, rgba(236, 72, 153, 0.35), transparent 70%);
+        filter: blur(80px);
+        opacity: 0.5;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app-shell">
+      <picture class="hero-picture" aria-hidden="true">
+        <source srcset="/assets/hero/hero-1920.avif 1920w, /assets/hero/hero-1280.avif 1280w" type="image/avif" />
+        <source srcset="/assets/hero/hero-1920.webp 1920w, /assets/hero/hero-1280.webp 1280w" type="image/webp" />
+        <img src="/assets/hero/hero-1920.jpg" alt="" loading="eager" decoding="async" />
+      </picture>
+      <div class="hero-gradient" aria-hidden="true"></div>
+      <div class="hero-ambient" aria-hidden="true"></div>
+      <div id="root"></div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
