--- a/client/index.html
+++ b/client/index.html
@@ -72,8 +72,7 @@
         object-fit: cover;
         filter: saturate(1.05) brightness(0.9);
       }
-      .hero-gradient,
-      .hero-ambient {
+      .hero-gradient {
         position: fixed;
         inset: 0;
         z-index: 0;
@@ -86,12 +85,20 @@
           linear-gradient(180deg, rgba(3, 3, 10, 0) 0%, rgba(3, 3, 10, 0.85) 70%, rgba(3, 3, 10, 1) 100%);
       }
       .hero-ambient {
+        position: fixed;
         inset: auto auto 12% 6%;
         width: min(320px, 35vw);
         height: min(320px, 35vw);
         background: radial-gradient(circle, rgba(236, 72, 153, 0.35), transparent 70%);
         filter: blur(80px);
-        opacity: 0.5;
+        opacity: 0.45;
+        pointer-events: none;
+        z-index: 0;
+      }
+      @media (max-width: 768px) {
+        .hero-ambient {
+          display: none;
+        }
       }
     </style>
   </head>
